storage-nfs-rwmany.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-storage-nfs
---
kind: Pod
apiVersion: v1
metadata:
  name: test-nfs-pod-1
  namespace: test-storage-nfs
spec:
  volumes:
    - name: storage-volume
      persistentVolumeClaim:
        claimName: nfs-pvc
  containers:
    - name: ubuntu-with-tools
      image: jcmvermeulen/ubuntu-with-tools:latest
      volumeMounts:
        - mountPath: /volume
          name: storage-volume
---
kind: Pod
apiVersion: v1
metadata:
  name: test-nfs-pod-2
  namespace: test-storage-nfs
spec:
  volumes:
    - name: storage-volume
      persistentVolumeClaim:
        claimName: nfs-pvc
  containers:
    - name: ubuntu-with-tools
      image: jcmvermeulen/ubuntu-with-tools:latest
      volumeMounts:
        - mountPath: /volume
          name: storage-volume
