storage-pvc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-storage-pvc
---
kind: Pod
apiVersion: v1
metadata:
  name: ubuntu-pod
  namespace: test-storage-pvc
spec:
  volumes:
    - name: storage-volume
      persistentVolumeClaim:
        claimName: storage-pvc
  containers:
    - name: ubuntu
      image: ubuntu:latest
      command: [ "/bin/bash", "-c", "--" ]
      args: [ "while true; do sleep 30; done;" ]
      volumeMounts:
        - mountPath: /volume
          name: storage-volume

#  kubectl exec  -n test-storage-pvc  ubuntu-pod  -it  --  bash
