ubuntu-with-tools.yaml
kind: Pod
apiVersion: v1
metadata:
  name: ubuntu-with-tools
  namespace: default
spec:
  containers:
    - name: ubuntu-with-tools
      image: jcmvermeulen/ubuntu-with-tools:latest

# Pod shell:   kubectl exec  -n default  ubuntu-with-tools  -it  --  bash
